--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,51 @@
+body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
 
-/* 
+.semaforo {
+    margin-top: 100px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.semaforo::after {
+    content: "";
+    width: 10px;
+    height: 100px;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    margin-left: 35px;
+}
 
-*/
+.red {
+    background-color: red;
+    width: 70px;
+    height: 70px;
+    margin: auto;
+    border-radius: 50%;
+    justify-content: center;
+}
+
+.yellow {
+    background-color: yellow;
+    width: 70px;
+    height: 70px;
+    margin: auto;
+    border-radius: 50%;
+    justify-content: center;
+}
+
+.green {
+    background-color: green;
+    width: 70px;
+    height: 70px;
+    margin: auto;
+    border-radius: 50%;
+    justify-content: center;
+}
+
+.iluminacion {
+    box-shadow: 0px 0px 10px 10px rgb(226, 233, 168);
+}
